Fix spacing between books on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -530,7 +530,6 @@ section .container {
 .favorite-books .favorite-book {
   display: flex;
   align-items: center;
-  margin: 20px 0px 20px 0px;
 }
 
 @media (max-width:641px)  {
